Corrected dashboard spacing Decreased spacing after title of Current & Upcoming Events and fixed events touching the sidebar

--- a/app/assets/stylesheets/activity.scss
+++ b/app/assets/stylesheets/activity.scss
@@ -4,7 +4,7 @@
 	padding:0px;
 	right:400px;
 	left:0px;
-	width: calc(100% - 370px);
+	width: calc(100% - 400px);
 	position:absolute;
 	padding-left: 30px;
 
@@ -24,6 +24,8 @@
 			font-size:20px;
 			color:#444444;
 			text-align:left;
+
+			h3 { margin-bottom: 8px; }
 		}
 	}
 }
